# mlops-2025-final_project

./: .coverage.RuiPinto.39815.XJTcGqsx  .cursorignore  .env.example  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  BETTING_SYSTEM_IMPLEMENTATION_PLAN.md  CONTRIBUTING.md  DEMO_SUCCESS_SUMMARY.md  DEVELOPMENT_PLAN.md  Dockerfile  GITHUB_DESCRIPTION.md  Makefile  NEXT_TASKS.md  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  README.md  TODO.md  commit_msg.txt  config.env.example  coverage.xml  debug_trainer.py  docker-compose.yml  entrypoint.sh  postgres_dashboard.json  pyproject.toml  railway.toml  render.yaml  requirements.txt  setup_dev.sh  setup_mlops_env.py  test_prefect_trigger.py  test_worker_setup.py
.github/workflows/: ci-cd.yml  ci.yml
alerts/: alert_20250712_172209.json  alert_20250712_172407.json  alert_20250712_172917.json
config/: __init__.py  config.py  database.py  demo_retraining_config.yaml  retraining_config.yaml
config/grafana/: datasources.yaml  grafana.ini
config_minimal/: __init__.py  config.py
dashboards/: demo_ml_monitoring_dashboard.json  drift_analysis_dashboard.json  mlops_monitoring_dashboard.json
data/alerts/: alerts.json
data/batches/: week_2024-W17_3matches.json
data/historical_replay/: historical_replay_20250713_174144.json
data/predictions/: daily_predictions.json  predictions.db
data/processed/: premier_league_data_20250715_205326.csv
data/raw/: premier_league_matches.parquet
data/real_data/: data_summary.txt  premier_league_matches.csv
data/retraining/: metadata.json
data/simulation/: match_calendar.csv  match_calendar.parquet  simulation_data_2023_24.parquet  simulation_metadata.json  training_data_2016_2023.parquet
deployment/: cloud-deployment.md
deployments/: data_pipeline_deployment.py  deploy_retraining_flow.py  prediction_pipeline_deployment.py  training_pipeline_deployment.py
docs/: automated_retraining.md  event_loop_fixes.md  evidently_grafana_monitoring.md  model_improvements.md  simplified_setup.md
docs/archive/: FINAL_SUMMARY.md  ORCHESTRATION_IMPLEMENTATION.md  PROJECT_OVERVIEW.md  QUICK_START_GUIDE.md  README.md  RUN_INSTRUCTIONS.md
evaluation_reports/: classification_report.txt  drift_report_20250708_210530.json  monitoring_summary.json
evidently_reports/: drift_report_20250708_210530.json
flows/: data_flow.py  prediction_flow.py  training_flow.py
grafana/dashboards/: corrected_mlops_dashboard.json  mlops_dashboard.json
mlflow/: __init__.py
mlflow/models/: model_metadata.json
mlflow_simplified/: __init__.py
mlflow_simplified/models/: model.pkl  model_metadata.json
notebooks/: premier_league_analysis.ipynb
prefect_flows/: training_flow.py
scripts/: README.md  check_db_tables.py  check_mlflow.py  clean_postgres.py  collect_real_data.py  dashboard_troubleshoot.py  debug_bets_table.py  debug_predictions.py  demo_access_guide.py  deploy_flows.py  docker_start.sh  evidently_grafana_demo.py  fix_database.py  fix_model.py  postgres_metrics_generator.py  prepare_simulation_data.py  project_status.py  run_checks.py  run_simplified_tests.py  run_tests.py  setup_dashboard.py  setup_database.py  setup_grafana.py  setup_prefect.py  start.py  start_dashboard.py  start_simplified.py  test_api.py  test_betting.py  test_betting_simulation.py  test_end_to_end_monitoring.py  test_enhanced_api.py  test_enhanced_model.py  test_retraining.py  test_services.py  test_simple_integration.py  test_simple_monitoring.py  test_simple_orchestration.py  test_weekly_processing.py
scripts/automation/: demo_architecture.py  demo_automated_retraining.py  demo_prefect_deployments.py  full_architecture_demo.py  manage_retraining.py  test_retraining_system.py
scripts/data/: collect_real_data.py
scripts/debug/: check_deployments.py  debug_trainer.py  test_prefect_trigger.py  test_worker_setup.py
scripts/deployment/: deploy_flows.py  deploy_retraining_flow.py  direct_deploy.py
scripts/monitoring/: demo_monitoring.py
scripts/setup/: setup_mlops_env.py
scripts/simulation/: complete_demo.py  demo_simulation.py  full_season_simulation.py  realtime_season_simulation.py  run_simulation.py
scripts/testing/: test_enhanced_api.py  test_enhanced_model.py
scripts/utils/: project_status.py  run_checks.py
src/: __init__.py  main.py
src/api/: __init__.py  api.py  enhanced_api.py  main.py  simplified_api.py
src/automation/: __init__.py  deployment_trigger.py  prefect_client.py  retraining_flow.py  retraining_scheduler.py  (+1 more)
tests/: README.md  __init__.py  test_simulation.py
tests_simplified/: __init__.py  test_prediction_pipeline.py
(+198 files in other folders)
