[project]
name = "premier-league-mlops"
version = "0.1.0"
description = "Automated MLOps system for Premier League match prediction and betting simulation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "mlflow>=2.5.0",
    "sqlalchemy>=2.0.0",
    "evidently>=0.4.0",
    "prefect>=2.10.0",
    "psycopg2-binary>=2.9.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "uvicorn>=0.23.0",
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "numpy>=1.24.0",
    "xgboost>=1.7.0",
    "joblib>=1.3.0",
    "schedule>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.12.0",
    "mypy>=1.5.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120  # More flexible line length
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",   # Pyflakes (critical: unused imports, undefined names)
    "E4",  # Import errors (critical)
    "E7",  # Statement errors (critical)
    "E9",  # Runtime errors (critical)
    "I",   # isort (import sorting)
]

ignore = [
    "E501",  # Line too long (let developers decide)
    "E722",  # Bare except (sometimes needed for broad exception handling)
    "B008",  # Do not perform function calls in argument defaults (FastAPI pattern)
    "B904",  # Raise from None/err (sometimes not needed)
    "E402",  # Module level import not at top (sometimes needed after load_dotenv)
]

[tool.ruff.lint.isort]
# Keep imports organized but flexible
force-single-line = false
split-on-trailing-comma = true

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
