[project]
name = "premier-league-mlops"
version = "0.1.0"
description = "Premier League MLOps System with Streamlit Dashboard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "plotly>=5.17.0",
    "streamlit>=1.28.0",
    "streamlit-autorefresh>=1.0.0",
    "scikit-learn>=1.3.0",
    "mlflow>=2.8.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120  # More flexible line length
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",   # Pyflakes (critical: unused imports, undefined names)
    "E4",  # Import errors (critical)
    "E7",  # Statement errors (critical)
    "E9",  # Runtime errors (critical)
    "I",   # isort (import sorting)
]

ignore = [
    "E501",  # Line too long (let developers decide)
    "E722",  # Bare except (sometimes needed for broad exception handling)
    "B008",  # Do not perform function calls in argument defaults (FastAPI pattern)
    "B904",  # Raise from None/err (sometimes not needed)
    "E402",  # Module level import not at top (sometimes needed after load_dotenv)
]

[tool.ruff.lint.isort]
# Keep imports organized but flexible
force-single-line = false
split-on-trailing-comma = true

[dependency-groups]
dev = [
    "uv>=0.1.0",
]
